--- a/src/index.css
+++ b/src/index.css
@@ -155,7 +155,7 @@ hr{
 
 
 .divider{
-  filter: drop-shadow(0 0 10px white) !important;
+  filter: drop-shadow(0 0 10px gray) !important;
 }
 
 #newsletter-submit{
